Fix Alignment #2115

--- a/assets/css/give-admin.css
+++ b/assets/css/give-admin.css
@@ -1081,7 +1081,7 @@ ASIDE
       padding: 0; }
     #give-metabox-form-data .give_options_panel .give-repeatable-field-section .give-remove {
       float: right;
-      width: 36px;
+      width: 22px;
       height: 36px;
       padding: 0;
       display: block;
@@ -1090,14 +1090,6 @@ ASIDE
       font-size: 21px;
       font-weight: 300;
       cursor: pointer; }
-    #give-metabox-form-data .give_options_panel .give-repeatable-field-section .give-remove:hover {
-      background-color: red;
-      color: white;
-      width: 30px;
-      height: 30px;
-      border-radius: 30px;
-      margin-top: 3px;
-      line-height: 28px; }
     #give-metabox-form-data .give_options_panel .give-repeatable-field-section .give-row-head {
       border-bottom: 1px solid #eee;
       cursor: move; }
@@ -1105,6 +1097,8 @@ ASIDE
         text-align: left !important; }
     #give-metabox-form-data .give_options_panel .give-repeatable-field-section .give-row.closed .toggle-indicator:before {
       content: "\f140"; }
+    #give-metabox-form-data .give_options_panel .give-repeatable-field-section .give-row .give-move .toggle-indicator:before {
+      margin-left: 7px; }
     #give-metabox-form-data .give_options_panel .give-repeatable-field-section .give-add-repeater-field-section-row-wrap {
       background-color: #f5f5f5; }
     #give-metabox-form-data .give_options_panel .give-repeatable-field-section .give-add-repeater-field-section-row {
