--- a/assets/scss/admin/forms.scss
+++ b/assets/scss/admin/forms.scss
@@ -497,7 +497,7 @@ ASIDE
 
 			.give-remove {
 				float: right;
-				width: 36px;
+				width: 22px;
 				height: 36px;
 				padding: 0;
 				display: block;
@@ -506,16 +506,6 @@ ASIDE
 				font-size: 21px;
 				font-weight: 300;
 				cursor: pointer;
-			}
-
-			.give-remove:hover {
-				background-color: red;
-				color: white;
-				width: 30px;
-				height: 30px;
-				border-radius: 30px;
-				margin-top: 3px;
-				line-height: 28px;
 			}
 
 			.give-row-head {
@@ -528,6 +518,10 @@ ASIDE
 
 			.give-row.closed .toggle-indicator:before {
 				content: "\f140";
+			}
+
+			.give-row .give-move .toggle-indicator:before {
+				margin-left: 7px;
 			}
 
 			.give-add-repeater-field-section-row-wrap {
